test_data/end_to_end/err__unary_op_cant_apply_to_type/stderr.txt
error: unary operation `-` can't be applied to type `String`
  --> main.cz:2:5
2 |     -"foo" + true;
        ~
